# pgdump_toc_edit

./: Cargo.toml  README.md
.github/workflows/: linux.yml  windows.yml
resources/: cmd.txt  schema.sql  schema1.sql  sign.js  toc.json  toc.txt  toc_foobar.txt
src/: keywords.rs  lib.rs  main.rs  rewrite_catalog.rs  rewrite_sql.rs  toc_datetime.rs  toc_entry.rs  toc_error.rs  toc_header.rs  toc_reader.rs  toc_string.rs  toc_writer.rs  utils.rs
tests/: json_test.rs  print_test.rs  rewrite_sql_test.rs  rewrite_test.rs
