[package]
name = "pgdump_toc_rewrite"
version = "1.0.0"
authors = ["alex@wiltondb.com"]
edition = "2018"
license = "Apache-2.0"
documentation = "https://docs.rs/pgdump_toc_rewrite"
repository = "https://github.com/wiltondb/pgdump_toc_rewrite"
readme = "README.md"
categories = ["database"]

[dependencies]
chrono = "0.4.30"
clap = "4.4.10"
flate2 = "1.0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlparser = "0.40.0"

[dev-dependencies]
copy_dir = "0.1.3"



