[package]
name = "pgdump_toc_rewrite"
version = "1.0.3"
authors = ["alex@wiltondb.com"]
edition = "2018"
license = "Apache-2.0"
documentation = "https://docs.rs/pgdump_toc_rewrite"
repository = "https://github.com/wiltondb/pgdump_toc_rewrite"
readme = "README.md"
categories = ["database"]
description = "Command-line utility and a library that can be used to rewrite Babelfish logical DB name in pg_dump TOC and Babelfish catalog files"
include = [
    "src/*.rs",
    "Cargo.toml",
]

[dependencies]
chrono = "0.4.30"
clap = "4.4.10"
clap_lex = "0.6.0"
flate2 = "1.0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlparser = "0.40.0"

[dev-dependencies]
copy_dir = "0.1.3"



